--- a/public/assets/templates/Mentor/assets/css/style.css
+++ b/public/assets/templates/Mentor/assets/css/style.css
@@ -416,28 +416,54 @@ h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: url("../img/hero-bg.jpg") top center;
   background-size: cover;
   position: relative;
+  /* background: url("../img/hero-bg.jpg") top center; */
 }
 
-#hero:before {
-  content: "";
-  background: rgba(0, 0, 0, 0.4);
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
+.text-overlay {
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff; /* Set the text color */
 }
+
+
+#hero .container-custom:before {
+    content: "";
+    background: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+#hero .item {
+    width: 100%;
+    height: 100%;
+  }
+
+
+.container-custom {
+    padding: 0;
+}
+
+video {
+    width: 100%;
+    height: auto;
+}
+
 
 #hero .container {
-  padding-top: 72px;
+  padding-top: 480px;
 }
 
 @media (max-width: 992px) {
   #hero .container {
-    padding-top: 62px;
+    padding-top: 400px;
   }
 }
 
@@ -1582,3 +1608,23 @@ section {
   color: var(--white);
   text-decoration: none;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: var(--white);
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--primary);
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--primary-hover);
+  }
